# django-htmx-tailwind-alpine

./: .dockerignore  .env  Makefile  docker-compose.yml  pyproject.toml
server/: settings.py  urls.py  views.py
tasks/: models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
tasks/templates/: create_task_modal.html  task.html  task_form.html  task_list.html  task_row.html  task_update_form.html  update_task_modal.html
templates/: base_layout.html
