[project]
name = "fast-api-dynamodb-graphql"
version = "0.1"
description = "fastapi backend with Dynamodb and graphql"
dependencies = [
    "Django===5.0.3",
    "psycopg2-binary===2.9.9",
]
[project.optional-dependencies]
dev = [
    "black"
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
)
'''